Added new UI files

--- a/frontend/auth-forgot-password/forgot-password.html
+++ b/frontend/auth-forgot-password/forgot-password.html
@@ -30,8 +30,11 @@
           Please enter the email address associated with your account
         </p>
 
-        <div class="center-card">
-          <form href="../auth-forgot-password/create-new-password.html">
+        <div class="fp-form-1">
+          <form
+            action="../auth-forgot-password/create-new-password.html"
+            method="post"
+          >
             <input type="email" placeholder="Enter your email" />
             <button type="submit" class="primary-button">Verify</button>
           </form>
