updated img & dashboard

--- a/frontend/dashboard/react pero sa html.html
+++ b/frontend/dashboard/react pero sa html.html
@@ -12,11 +12,22 @@
 
 <body>
 <div class="dashboard">
-
-  <header>
+  <div class="header">
+    <div class="logo-div">
+      <div class="logo-pic">
+        <img src="../images/tokuen_logo.png">
+      </div>
+      <div class="logo">TOKUEN</div>
+    </div>
+    <div class="user">
+      <div class="bell"><img src="../images/bell-alert-img-transparent.png"></div>
+      <div class="avatar">JC</div>
+    </div>
+  </div>
+  <div class="header">
     <h1>Good morning, Juan</h1>
     <span id="date"></span>
-  </header>
+  </div>
 
   <section class="cards">
     <div class="card"><h2>02</h2><p>Total approved</p></div>
@@ -35,12 +46,12 @@
         </thead>
         <tbody>
           <tr>
-            <td class="tx-type"><div class="tx-icon">💳</div>Loan payment</td>
+            <td class="tx-type"><div class="tx-icon"><img src="../images/bank-img-transparent.png"></div>Loan payment</td>
             <td class="tx-amount">₱5,400.00</td>
             <td>Nov 12</td>
           </tr>
           <tr>
-            <td class="tx-type"><div class="tx-icon">🏦</div>Bank transfer</td>
+            <td class="tx-type"><div class="tx-icon"><img src="../images/bank-card-img-transparent.png"></div>Bank transfer</td>
             <td class="tx-amount">₱12,000.00</td>
             <td>Nov 5</td>
           </tr>
@@ -56,9 +67,9 @@
       </div>
 
       <div class="wallet-actions">
-        <div><div class="icon">＋</div><p>Top Up</p></div>
-        <div><div class="icon">⧉</div><p>Transfer</p></div>
-        <div><div class="icon">💳</div><p>Loan</p></div>
+        <div><div class="icon"><img src="../images/topup-img.png"></div><p>Top Up</p></div>
+        <div><div class="icon"><img src="../images/transfer-payment-img.png"></div><p>Transfer</p></div>
+        <div><div class="icon"><img src="../images/loan-payment-img.png"></div><p>Loan</p></div>
       </div>
 
       <p class="wallet-note">
